samples/_failures_safe/1761248943_849e2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07ed7497.c: In function ‘main’:
./samples/SAFE/__tmp_07ed7497.c:149:5: error: expected declaration or statement at end of input
  149 |     if (!decompress_rle(compressed.data, compressed.size, &decompressed)) {
      |     ^~
./samples/SAFE/__tmp_07ed7497.c:149:5: error: expected declaration or statement at end of input
